--- a/home1/group144/index.html
+++ b/home1/group144/index.html
@@ -16,10 +16,10 @@
 
         <ul class="first">
             <li><a href="#" class="home">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
+            <li><a href="about.html">ABOUT</a></li>
             <li><a href="#">TEAM</a></li>
-            <li><a href="#">FEATURES</a></li>
-            <li><a href="#">CONTACTS</a></li>
+            <li><a href="about.html">FEATURES</a></li>
+            <li><a href="home1">CONTACTS</a></li>
         </ul>
     </nav>
     
