--- a/home1/group144/index.html
+++ b/home1/group144/index.html
@@ -12,19 +12,19 @@
     
     <nav class="navigation">
 
-      <h2 class="logo">Up<span class="const">Consruction</span><span class="dot">.</span></h2>
+      <h2 class="logo">Up<span class="const">Construction</span><span class="dot">.</span></h2>
 
         <ul class="first">
-            <li><a href=" /home1/group144/about.html" class="home">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="#">TEAM</a></li>
-            <li><a href="about.html">FEATURES</a></li>
-            <li><a href="home1">CONTACTS</a></li>
+            <li><a href="" class="home">HOME</a></li>
+            <li><a href=".">ABOUT</a></li>
+            <li><a href="">TEAM</a></li>
+            <li><a href="">FEATURES</a></li>
+            <li><a href="">CONTACTS</a></li>
         </ul>
     </nav>
     
     <div class="content">
-         <h1 class="heading">Welcome to <br> UpConstruction</h1>
+         <h1 class="heading">Welcome to <br>UpConstruction</h1>
          <p class="p1">Our state-of-the-art construction facility brings your vision to life. <br>
              We build with integrity and vision.<br> 
              We are the one stop shop for all your building dreams. <br>
