--- a/home1/group144/index.html
+++ b/home1/group144/index.html
@@ -16,7 +16,7 @@
 
         <ul class="first">
             <li><a href="" class="home">HOME</a></li>
-            <li><a href=".">ABOUT</a></li>
+            <li><a href="/about.html">ABOUT</a></li>
             <li><a href="">TEAM</a></li>
             <li><a href="">FEATURES</a></li>
             <li><a href="">CONTACTS</a></li>
@@ -107,8 +107,8 @@
             <h3 class="links1">Useful Links</h3>
 
             <ul class="second">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="/about.html">About us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Terms of service</a></li>
                 <li><a href="#">Privacy policy</a></li>
