--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
                 <h2 class="logos">Up<span class="consts">Construction</span></h2>
           
                   <ul class="first">
-                      <li><a href=" /home1/group144/about.html" class="home">HOME</a></li>
-                      <li><a href="about.html">ABOUT</a></li>
-                      <li><a href="/">TEAM</a></li>
-                      <li><a href="/about.html">FEATURES</a></li>
-                      <li><a href="home1">CONTACTS</a></li>
+                      <li><a href="/home1/group144/index.html" class="home">HOME</a></li>
+                      <li><a href="./about.html">ABOUT</a></li>
+                      <li><a href="">TEAM</a></li>
+                      <li><a href="">FEATURES</a></li>
+                      <li><a href="">CONTACTS</a></li>
                   </ul>
               </nav>
             <h1><span>OUR</span> JOURNEY</h1>
@@ -102,8 +102,8 @@
             <h3 class="links1">Useful Links</h3>
 
             <ul class="second">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="/home1/group144/index.html">Home</a></li>
+                <li><a href="/about.html">About us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Terms of service</a></li>
                 <li><a href="#">Privacy policy</a></li>
