--- a/home1/group144/index.html
+++ b/home1/group144/index.html
@@ -18,7 +18,7 @@
             <li><a href="" class="home">HOME</a></li>
             <li><a href="/about.html">ABOUT</a></li>
             <li><a href="">TEAM</a></li>
-            <li><a href="">FEATURES</a></li>
+            <li><a href="/Features1/featuresindex.html">FEATURES</a></li>
             <li><a href="">CONTACTS</a></li>
         </ul>
     </nav>
