--- a/home1/group144/index.html
+++ b/home1/group144/index.html
@@ -15,7 +15,7 @@
       <h2 class="logo">Up<span class="const">Construction</span><span class="dot">.</span></h2>
 
         <ul class="first">
-            <li><a href="" class="home">HOME</a></li>
+            <li><a href="/home1/group144/index.html" class="home">HOME</a></li>
             <li><a href="/about.html">ABOUT</a></li>
             <li><a href="">TEAM</a></li>
             <li><a href="/Features1/featuresindex.html">FEATURES</a></li>
