--- a/featuresindex.html
+++ b/featuresindex.html
@@ -12,10 +12,10 @@
             <h2 class="logo">MY<span class="const">PORTFOLIO</span>
                 <span class="dot">.</span></h2>
             <ul class="first">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <li><a href="#">SERVICES</a></li>
+                <li><a href="/home1/group144/index.html">HOME</a></li>
+                <li><a href="/about.html">ABOUT</a></li>
+                <li><a href="">PROJECTS</a></li>
+                <li><a href="/featuresindex.html">SERVICES</a></li>
                 <li><a href="#">CONTACTS</a></li>
             </ul>
         </nav>
