--- a/home1/group144/index.html
+++ b/home1/group144/index.html
@@ -17,8 +17,8 @@
         <ul class="first">
             <li><a href="/home1/group144/index.html" class="home">HOME</a></li>
             <li><a href="/about.html">ABOUT</a></li>
-            <li><a href="">TEAM</a></li>
-            <li><a href="/Features1/featuresindex.html">FEATURES</a></li>
+            <li><a href="/the team.html">TEAM</a></li>
+            <li><a href="/featuresindex.html">FEATURES</a></li>
             <li><a href="">CONTACTS</a></li>
         </ul>
     </nav>
@@ -109,8 +109,8 @@
             <ul class="second">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="/about.html">About us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Terms of service</a></li>
+                <li><a href="/featuresindex.html">Services</a></li>
+                <li><a href="">Terms of service</a></li>
                 <li><a href="#">Privacy policy</a></li>
             </ul>
         </div>
