--- a/featuresindex.html
+++ b/featuresindex.html
@@ -9,14 +9,14 @@
     <div class="navbar">
     
         <nav class="navigation">
-            <h2 class="logo">MY<span class="const">PORTFOLIO</span>
+            <h2 class="logo">UP<span class="const">Construction</span>
                 <span class="dot">.</span></h2>
             <ul class="first">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">CONTACTS</a></li>
+                <li><a href="#">FEATURES</a></li>
+                <li><a href="#">TEAM</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
             </ul>
         </nav>
         <div class="content">
